domain/src/main/java/com/example/domain/errors/NotFoundException.kt
package com.example.domain.errors

class NotFoundException(message: String) : Throwable(message)
